# Lab-scale

./: .gitignore  FastAPI-Dockerfile  README.md  Worker-Dockerfile
.github/workflows/: auto_build.yml  fastapi_auto_build.yml  worker_auto_build.yml
Backend/: pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 060ccd072103_add_riot_reqeust_table.py  0d570799d126_fix_league_user.py  3327eaa8689f_fix_users_nullable_add_match_.py  4bd5e2adf8a4_add_requests_task_table.py  a83bfc781081_fix_leagues.py  dfeb37d84c35_match_table_init.py  e27573dca4a1_init_table.py  ed921c9c5152_fix_users_add_leagues.py
Backend/app/: celery_app.py  main.py
Backend/app/api/: deps.py  main.py
Backend/app/api/routes/: item.py  match.py  user.py
Backend/app/core/: aws_secrets_key.py  config.py  db.py  middle_ware.py
Backend/app/db/models/: base.py  match.py  user_matches.py  users.py
Backend/app/schema/: match.py  sqs.py  user.py
Backend/app/tasks/: update_task.py
Backend/app/utils/: request_handle.py
Backend/utils/: csv_user_info_rdb.py  leages_to_rdb.py  s3_to_rdb.py  user_info_rdb.py
Crawler/LEAGUE-V4/: S3Client.py  aws_secrets_key.py  aws_sns.py  dockerfile  league_cralwer.py  main.py  pyproject.toml  summoner.json
Crawler/Match-v5_validation/: main.py
GameApp/: package-lock.json
GameApp/app/: package-lock.json  package.json
GameApp/app/src/: App.js
GameApp/app/src/components/: AIPredicPage.jsx  GameStats.jsx  GlobalStyle.jsx  MainPage.jsx  PredictSC.jsx  PredictionResult.jsx  Research.jsx  SearchBar.jsx  SidebarComponent.jsx  testcomponent.jsx
GameApp/app/src/components/module/: GameItems.jsx  GameList.jsx  GameModal.jsx  NotFound.jsx  ProfileCard.jsx  summoner_item.js
GameApp/app/src/redux/: gameStatsSlice.js  getPuuidSlice.js  matchSlice.js  store.js  updateMatchSlice.js  userInfoSlice.js  userLeagueSlice.js
Infra/: .terraform.lock.hcl  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  riot_rds.tf  s3.tf  scrap_lambda.tf  server_ecs.tf  sns.tf  sqs.tf  terraform.tf  variables.tf  vpc_endpoint.tf  vpc_private.tf  worker_ecs.tf
Infra/lambda_file/: scraper.py
PPT/: PPT.pptx  보고서.hwpx
Presentation/AI를 이용한 게임 전적 사이트 보고서/: AI를 이용한 게임 전적 사이트 보고서(김영현, 강동균, 김동욱, 홍태의).hwpx
Tab-Transformer/: TabTransformer.ipynb  TabTransformer_model.pth
Tab-Transformer/Label_pkl/: label_encoder_championId.pkl  label_encoder_individualPosition.pkl  label_encoder_lane.pkl  label_encoder_primaryStyle1.pkl  label_encoder_primaryStyle2.pkl  label_encoder_primaryStyle3.pkl  label_encoder_primaryStyle4.pkl  label_encoder_role.pkl  label_encoder_subStyle1.pkl  label_encoder_subStyle2.pkl
Tab-Transformer/SageMaker/: EndPoint.py  eval_model.py  inference.py
TabTF/: Bronze_sample.csv  TabTransformer.ipynb  TabTransformer_model.pth  data_set.ipynb  match.ipynb  prediction_test.ipynb  pyproject.toml  student_model.ipynb  test_data_2.csv
TabTF/Label_pkl/: label_encoder_championId.pkl  label_encoder_individualPosition.pkl  label_encoder_primaryStyle2.pkl  label_encoder_primaryStyle3.pkl  label_encoder_primaryStyle4.pkl  label_encoder_subStyle1.pkl  label_encoder_teamPosition.pkl
dataset/: AQD_setting.ipynb  sample.csv
info/: champion_id.json  runesReforged.json
lib-commons/: pyproject.toml
lib-commons/lib_commons/aws_client/: sqs_client.py
lib-commons/lib_commons/models/: __init__.py  match.py  riot_logic.py  server_info.py  user_matches.py  users.py
