[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gongjungjebiyudanja <73692488+YoungHyeon1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
boto3 = "^1.34.118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
