[tool.poetry]
name = "tabulr transformers"
version = "0.1.0"
description = ""
authors = ["YoungHyeon1 <73692488+YoungHyeon1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = { version = "^2.3.0", source = "torch" }
pytorch-tabular = "^1.1.0"
requests = "^2.31.0"
keras = "^3.3.3"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"

transformers = "^4.41.1"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"
